--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
 
     <script type="text/javascript" src="cordova.js"></script>
 <script type="text/javascript" charset="utf-8" src="js/SQLitePlugin.js"></script>
-<script src="https://code.jquery.com/jquery-1.10.2.js"></script> 
-<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-<script type="text/javascript" src="https://debug2.phonegap.com/target/target-script-min.js#e11e6db2-753a-11e8-8af8-0ec4f527fa0c"></script>
  
 <script type="text/javascript">
 //XML auslesen
@@ -167,7 +164,7 @@ for(var i = 0; i < answers[keyAnswer[counter]].length; i++)
     }
 }
 
-$("#testForm").trigger("creat");
+//document.getElementById("#testForm").trigger("creat");
 
 counter++;
  
